Hilbert: move input visibility from CSS to JS to avoid desync on refresh

--- a/hilbert/hilbert.css
+++ b/hilbert/hilbert.css
@@ -21,7 +21,7 @@ svg {
 #inputs {
   max-height: 10vmin;
 }
-.hidden {
+#rainbow-checkbox:checked ~ [type="color"] {
   visibility: hidden;
 }
 .octicon {
